proyecto-final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> INICIODEPROGRAMA declaraciones FINPROGRAMA
Rule 2     declaraciones -> librerias
Rule 3     declaraciones -> cuerpo
Rule 4     librerias -> LIBRERIA PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC COMA librerias
Rule 5     librerias -> LIBRERIA PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC ENDOFLINE cuerpo
Rule 6     cuerpo -> variable cuerpo
Rule 7     cuerpo -> funcion cuerpo
Rule 8     cuerpo -> asignacion cuerpo
Rule 9     cuerpo -> procedimiento cuerpo
Rule 10    cuerpo -> condicional cuerpo
Rule 11    cuerpo -> bucle cuerpo
Rule 12    cuerpo -> reservadas cuerpo
Rule 13    cuerpo -> vpin cuerpo
Rule 14    cuerpo -> empty
Rule 15    vpin -> VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
Rule 16    reservadas -> ADELANTE PARENTESISA PARENTESISC ENDOFLINE
Rule 17    reservadas -> ATRAS PARENTESISA PARENTESISC ENDOFLINE
Rule 18    reservadas -> IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
Rule 19    reservadas -> DERECHA PARENTESISA PARENTESISC ENDOFLINE
Rule 20    reservadas -> ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
Rule 21    reservadas -> ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
Rule 22    reservadas -> FRENAR PARENTESISA PARENTESISC ENDOFLINE
Rule 23    bucle -> WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
Rule 24    condicional -> IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
Rule 25    condicional -> IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
Rule 26    procedimiento -> PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
Rule 27    asignacion -> ID IGUAL ID ENDOFLINE
Rule 28    asignacion -> ID IGUAL NUMBER ENDOFLINE
Rule 29    asignacion -> ID IGUAL DECIMALNUMBER ENDOFLINE
Rule 30    asignacion -> ID IGUAL BOOLEANS ENDOFLINE
Rule 31    comparacion -> ID OPERADOR ID
Rule 32    comparacion -> ID OPERADOR NUMBER
Rule 33    comparacion -> ID OPERADOR DECIMALNUMBER
Rule 34    comparacion -> ID OPERADOR BOOLEANS
Rule 35    comparacion -> NUMBER OPERADOR ID
Rule 36    comparacion -> NUMBER OPERADOR NUMBER
Rule 37    comparacion -> NUMBER OPERADOR DECIMALNUMBER
Rule 38    comparacion -> NUMBER OPERADOR BOOLEANS
Rule 39    comparacion -> DECIMALNUMBER OPERADOR ID
Rule 40    comparacion -> DECIMALNUMBER OPERADOR NUMBER
Rule 41    comparacion -> DECIMALNUMBER OPERADOR DECIMALNUMBER
Rule 42    comparacion -> DECIMALNUMBER OPERADOR BOOLEANS
Rule 43    comparacion -> BOOLEANS OPERADOR ID
Rule 44    comparacion -> BOOLEANS OPERADOR NUMBER
Rule 45    comparacion -> BOOLEANS OPERADOR DECIMALNUMBER
Rule 46    comparacion -> BOOLEANS OPERADOR BOOLEANS
Rule 47    funcion -> FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
Rule 48    variable -> VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
Rule 49    argumentos -> ID VARTYPESEPARATOR TYPE COMA argumentos
Rule 50    argumentos -> ID VARTYPESEPARATOR TYPE
Rule 51    empty -> <empty>

Terminals, with rules where they appear

ADELANTE             : 16
ATRAS                : 17
BEGIN                : 23 24 25 25
BOOLEANS             : 30 34 38 42 43 44 45 46 46
COMA                 : 4 49
COMMENT              : 
DECIMALNUMBER        : 29 33 37 39 40 41 41 42 45
DERECHA              : 19
ELSE                 : 25
END                  : 23 24 25 25
ENDOFLINE            : 5 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 47 48
ESPERAR              : 20 21
EXTENSION            : 4 5
FINPROGRAMA          : 1
FRENAR               : 22
FUNCION              : 47
ID                   : 4 5 15 21 26 27 27 28 29 30 31 31 32 33 34 35 39 43 47 48 49 50
IF                   : 24 25
IGUAL                : 27 28 29 30
INICIODEPROGRAMA     : 1
IZQUIERDA            : 18
LIBRERIA             : 4 5
NUMBER               : 20 28 32 35 36 36 37 38 40 44
OPERADOR             : 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
OPERADORPUNTO        : 4 5
PARENTESISA          : 4 5 15 16 17 18 19 20 21 22 23 24 25 26 47 48
PARENTESISC          : 4 5 15 16 17 18 19 20 21 22 23 24 25 26 47 48
PROCEDIMIENTO        : 26
TYPE                 : 47 48 49 50
TYPEVPIN             : 15
VARIABLE             : 48
VARTYPESEPARATOR     : 15 47 48 49 50
VPIN                 : 15
WHILE                : 23
error                : 

Nonterminals, with rules where they appear

argumentos           : 26 47 49
asignacion           : 8
bucle                : 11
comparacion          : 23 24 25
condicional          : 10
cuerpo               : 3 5 6 7 8 9 10 11 12 13 23 24 25 25
declaraciones        : 1
empty                : 14
funcion              : 7
librerias            : 2 4
procedimiento        : 9
programa             : 0
reservadas           : 12
variable             : 6
vpin                 : 13

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . INICIODEPROGRAMA declaraciones FINPROGRAMA

    INICIODEPROGRAMA shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> INICIODEPROGRAMA . declaraciones FINPROGRAMA
    (2) declaraciones -> . librerias
    (3) declaraciones -> . cuerpo
    (4) librerias -> . LIBRERIA PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC COMA librerias
    (5) librerias -> . LIBRERIA PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC ENDOFLINE cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    LIBRERIA        shift and go to state 6
    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)

    declaraciones                  shift and go to state 3
    librerias                      shift and go to state 4
    cuerpo                         shift and go to state 5
    variable                       shift and go to state 8
    funcion                        shift and go to state 9
    asignacion                     shift and go to state 10
    procedimiento                  shift and go to state 11
    condicional                    shift and go to state 12
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 3

    (1) programa -> INICIODEPROGRAMA declaraciones . FINPROGRAMA

    FINPROGRAMA     shift and go to state 29


state 4

    (2) declaraciones -> librerias .

    FINPROGRAMA     reduce using rule 2 (declaraciones -> librerias .)


state 5

    (3) declaraciones -> cuerpo .

    FINPROGRAMA     reduce using rule 3 (declaraciones -> cuerpo .)


state 6

    (4) librerias -> LIBRERIA . PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC COMA librerias
    (5) librerias -> LIBRERIA . PARENTESISA ID OPERADORPUNTO EXTENSION PARENTESISC ENDOFLINE cuerpo

    PARENTESISA     shift and go to state 30


state 7

    (27) asignacion -> ID . IGUAL ID ENDOFLINE
    (28) asignacion -> ID . IGUAL NUMBER ENDOFLINE
    (29) asignacion -> ID . IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> ID . IGUAL BOOLEANS ENDOFLINE

    IGUAL           shift and go to state 31


state 8

    (6) cuerpo -> variable . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    variable                       shift and go to state 8
    cuerpo                         shift and go to state 32
    funcion                        shift and go to state 9
    asignacion                     shift and go to state 10
    procedimiento                  shift and go to state 11
    condicional                    shift and go to state 12
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 9

    (7) cuerpo -> funcion . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    funcion                        shift and go to state 9
    cuerpo                         shift and go to state 33
    variable                       shift and go to state 8
    asignacion                     shift and go to state 10
    procedimiento                  shift and go to state 11
    condicional                    shift and go to state 12
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 10

    (8) cuerpo -> asignacion . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    asignacion                     shift and go to state 10
    cuerpo                         shift and go to state 34
    variable                       shift and go to state 8
    funcion                        shift and go to state 9
    procedimiento                  shift and go to state 11
    condicional                    shift and go to state 12
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 11

    (9) cuerpo -> procedimiento . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    procedimiento                  shift and go to state 11
    cuerpo                         shift and go to state 35
    variable                       shift and go to state 8
    funcion                        shift and go to state 9
    asignacion                     shift and go to state 10
    condicional                    shift and go to state 12
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 12

    (10) cuerpo -> condicional . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    condicional                    shift and go to state 12
    cuerpo                         shift and go to state 36
    variable                       shift and go to state 8
    funcion                        shift and go to state 9
    asignacion                     shift and go to state 10
    procedimiento                  shift and go to state 11
    bucle                          shift and go to state 13
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 13

    (11) cuerpo -> bucle . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .

    VARIABLE        shift and go to state 17
    FUNCION         shift and go to state 18
    ID              shift and go to state 7
    PROCEDIMIENTO   shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    ADELANTE        shift and go to state 22
    ATRAS           shift and go to state 23
    IZQUIERDA       shift and go to state 24
    DERECHA         shift and go to state 25
    ESPERAR         shift and go to state 26
    FRENAR          shift and go to state 27
    VPIN            shift and go to state 28
    FINPROGRAMA     reduce using rule 51 (empty -> .)
    END             reduce using rule 51 (empty -> .)

    bucle                          shift and go to state 13
    cuerpo                         shift and go to state 37
    variable                       shift and go to state 8
    funcion                        shift and go to state 9
    asignacion                     shift and go to state 10
    procedimiento                  shift and go to state 11
    condicional                    shift and go to state 12
    reservadas                     shift and go to state 14
    vpin                           shift and go to state 15
    empty                          shift and go to state 16

state 14

    (12) cuerpo -> reservadas . cuerpo
    (6) cuerpo -> . variable cuerpo
    (7) cuerpo -> . funcion cuerpo
    (8) cuerpo -> . asignacion cuerpo
    (9) cuerpo -> . procedimiento cuerpo
    (10) cuerpo -> . condicional cuerpo
    (11) cuerpo -> . bucle cuerpo
    (12) cuerpo -> . reservadas cuerpo
    (13) cuerpo -> . vpin cuerpo
    (14) cuerpo -> . empty
    (48) variable -> . VARIABLE PARENTESISA ID VARTYPESEPARATOR TYPE PARENTESISC ENDOFLINE
    (47) funcion -> . FUNCION ID PARENTESISA argumentos PARENTESISC VARTYPESEPARATOR TYPE ENDOFLINE
    (27) asignacion -> . ID IGUAL ID ENDOFLINE
    (28) asignacion -> . ID IGUAL NUMBER ENDOFLINE
    (29) asignacion -> . ID IGUAL DECIMALNUMBER ENDOFLINE
    (30) asignacion -> . ID IGUAL BOOLEANS ENDOFLINE
    (26) procedimiento -> . PROCEDIMIENTO ID PARENTESISA argumentos PARENTESISC ENDOFLINE
    (24) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (25) condicional -> . IF PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ELSE BEGIN cuerpo END ENDOFLINE
    (23) bucle -> . WHILE PARENTESISA comparacion PARENTESISC BEGIN cuerpo END ENDOFLINE
    (16) reservadas -> . ADELANTE PARENTESISA PARENTESISC ENDOFLINE
    (17) reservadas -> . ATRAS PARENTESISA PARENTESISC ENDOFLINE
    (18) reservadas -> . IZQUIERDA PARENTESISA PARENTESISC ENDOFLINE
    (19) reservadas -> . DERECHA PARENTESISA PARENTESISC ENDOFLINE
    (20) reservadas -> . ESPERAR PARENTESISA NUMBER PARENTESISC ENDOFLINE
    (21) reservadas -> . ESPERAR PARENTESISA ID PARENTESISC ENDOFLINE
    (22) reservadas -> . FRENAR PARENTESISA PARENTESISC ENDOFLINE
    (15) vpin -> . VPIN PARENTESISA ID VARTYPESEPARATOR TYPEVPIN PARENTESISC ENDOFLINE
    (51) empty -> .
